# study

DS/week1/ArrayList/: Makefile  addALElement.c  arraylist.h  clearArrayList.c  createArrayList.c  deleteArrayList.c  displayArrayList.c  getALElement.c  getArrayListLength.c  isArrayListFull.c  main.c  main_myukang.c  removeALElement.c
DS/week1/Doublylist/: addDLElement.c  createDoublyList.c  deleteDoublyList.c  displayDoublyList.c  getDLElement.c  getDoublyListLength.c  main  main.c
DS/week1/LinkedList/: Makefile  clearLinkedList.c  createLinkedList.c  deleteLinkedList.c  getLinkedListLength.c  main.c  removeLLElement.c
DS/week3/: arrayqueue.c  linkeddeque.c
DS/week4/: bintree.c  bintree.h  main.c  traverse_tree.c
TDD/: Dollar.hpp  Makefile  Todo.md  main  main.cpp  testFile  testFile.cpp
TDD/cpp/: CMakeLists.txt  mytests.cpp
TDD/cpp2/: Makefile  test.cc
TDD/cpp3/: cppunit.h
TDD/ref/: multi.cc  multi.h  multi_test
machine_learning/lecture10/: numerical_derivative_1.py  numerical_derivative_2.py
machine_learning/lecture11/: numerical_derivative_ex.py  numerical_derivative_ex2.py
machine_learning/lecture13/: Regression_multi.py  Regression_simple.py
machine_learning/lecture16/: classification_multi.py  classification_single.py
machine_learning/lecture18/: AND_OR_NAND.py  XOR.py
machine_learning/lecture19/: XOR_DeepLearning.py
machine_learning/lecture2/: list.py
machine_learning/lecture3/: list_comprehension.py
nestjs/nest_practice/: package-lock.json  package.json
svelte/svelte_20230620/: package-lock.json  package.json
(+104 files in other folders)
